browser/themes/shared/preferences/preferences.css
/* - This Source Code Form is subject to the terms of the Mozilla Public
   - License, v. 2.0. If a copy of the MPL was not distributed with this file,
   - You can obtain one at http://mozilla.org/MPL/2.0/. */

@namespace html "http://www.w3.org/1999/xhtml";

/* Global rules */
:root {
  /**
   * Headings are currently 1 level higher than they should be. Eventually
   * "Settings" will become our h1 and everything will drop down a level so our
   * h1s become h2s, h2s become h3s, etc.
   */
  --font-size-heading-xlarge: var(--font-size-xlarge);
  --font-size-heading-large: var(--font-size-large);
  --font-size-heading-medium: var(--font-size-medium);
  --select-max-width: 20rem;
  user-select: text;
}

#preferences-root {
  text-rendering: optimizeLegibility;
}

@media not print {
  #preferences-root,
  #preferences-body {
    height: 100%;
    overflow: hidden;
  }
}

#preferences-root,
#preferences-body {
  margin: 0;
  padding: 0;
  width: 100%;
}

#preferences-body {
  vertical-align: top; /* See bug 1606130 */
  display: flex;
  flex-direction: column;
}

/*
  The stack has some very tall content but it shouldn't be taller than the
  viewport (and we know the tall content will still be accessible via scrollbars
  regardless if the stack has a shorter height). So we use min-height: 0 to allow
  the stack to be smaller than its content height so it can fit the viewport size.
*/
#preferences-stack {
  min-height: 0;
}

#categories {
  min-width: calc(var(--size-sidebar) - 42px);

  @media (max-width: 950px) {
    min-width: auto;
  }
}

#search-container {
  --search-container-padding: var(--space-small);
  --search-container-margin: calc(var(--focus-outline-width) + var(--focus-outline-offset));

  position: sticky;
  top: 0;
  /* Bug 2026689 Negative margin is used here to hide the borders of setting-controls on scroll
     as well as the shadow to the left of the searchbar */
  margin-inline-start: -4px;
  /* 4px of additional width to account for the -4px of margin defined above */
  width: calc(100% + 4px);
  /* z-index = 2 so that the search-tooltips don't appear when the user scrolls
     up after searching. */
  z-index: 2;
  background-color: var(--background-color-canvas);
  padding-top: 40px;
  padding-bottom: var(--search-container-padding);
  padding-inline: var(--focus-outline-offset);
  /* Ensure focus indicators on elements below the search container
     aren't obscured. */
  margin-bottom: var(--search-container-margin);
}

#searchInput {
  width: 100%;
}

@media (max-width: 52rem) {
  #search-container:has(#policies-container-content:not([hidden])) {
    padding-top: var(--space-small);
  }
}

.main-content {
  contain: inline-size;
  /* 72px matches moz-page-nav's --page-nav-margin-top, minus the 40px
     padding-top already set in common-shared.css. */
  margin-top: 32px;
  padding-top: 0;
  padding-inline-end: 42px;
  scroll-padding-top: calc(40px + var(--search-container-padding) + var(--search-container-margin) + 40px);

  @media (max-width: 830px) {
    padding-inline: var(--space-medium);
  }
}

.pane-container {
  /* A workaround to keep the container always float on the `top: 0` (Bug 1377009) */
  display: block;
  width: min(100%, 600px);
  min-width: min-content;
  /* Used to prevent cutting off the borders of the setting-controls */
  margin-inline-start: 1px;
}

#mainPrefPane {
  width: 100%;
}

html|div[data-category],
groupbox[data-category],
setting-group[data-category] {
  margin: 0 0 32px;
}

/* Bug 2002963 - payments and addresses are in a groupbox together, but they probably shouldn't be */
#formAutofillGroupBox:not([hidden]) {
  display: flex;
  flex-direction: column;
  gap: 32px;
}

html|h1 {
  margin: 0 0 var(--space-small);
}

html|h2 {
  margin: var(--space-small) 0 var(--space-xxsmall) 0;
}

description.indent,
.indent:not(#browserPrivateEngineSelection) > description {
  color: var(--text-color-deemphasized);

  /* Ensures margin on checkboxes, radios, and description don't create a big gap between the input and indented description */
  margin-top: calc(var(--space-xsmall) * -1);
}

button,
treecol,
menulist,
html|select {
  /* override the root rule */
  user-select: none;
}

/* Buttons get a default min-width in XUL. When they also have flex, they will
 * be large enough anyway, and we don't want them to become smaller than their inner
 * text which would then overflow the button. Set min-width back to auto for that:
 */
button[flex] {
  min-width: auto;
}

description,
label {
  margin: var(--space-xxsmall) 0;
}

label {
  margin: var(--space-xxsmall) 0;

  &.tail-with-learn-more + a {
    margin-block: var(--space-xxsmall);
    margin-inline: var(--space-small) 0;
  }
}

.description-deemphasized {
  color: var(--text-color-deemphasized);
}

.tip-caption {
  font-size: 0.9em;
  color: var(--text-color-deemphasized);
}

menulist::part(label),
menuitem > label,
button > hbox > label {
  line-height: unset;
}

.indent {
  margin-inline-start: calc(var(--checkbox-size) + var(--checkbox-margin-inline)) !important;
}

checkbox,
radio {
  margin: var(--space-small) 0;

  &.tail-with-learn-more + a {
    margin-block: var(--space-small);
    margin-inline: var(--space-small) 0;
  }
}

/* Add a bit of space to the end of descriptions to
 * leave margin with e.g. additional buttons on the side. */
.description-with-side-element {
  margin-inline-end: 10px !important;
}

.learnMore {
  margin-inline-start: 0;
  font-weight: normal;
  white-space: nowrap;
}

.accessory-button {
  min-width: 150px;
  margin: 4px 0;
}

.spotlight:not(setting-group:has(> moz-card)) {
  background-color: color-mix(in srgb, var(--color-accent-primary) 15%, transparent);
  outline: var(--border-color-selected) 1px dotted;
  animation: fade-out 0.5s ease-out 2s forwards;
  /* Show the border to spotlight the components in high-contrast mode. */
  border: 1px solid transparent;
  border-radius: var(--border-radius-xsmall);
}
/* ... */

